# timer

./: AGENTS.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.codex/: commit-log.md  rules.md
.codex/skills/core-actionbook/: SKILL.md
.codex/skills/core-agent-browser/: SKILL.md
.codex/skills/core-dynamic-skills/: SKILL.md
.codex/skills/core-fix-skill-docs/: SKILL.md
.github/workflows/: release.yml
src/: animation.rs  app.rs  cli.rs  lib.rs  main.rs  render.rs  theme.rs  weather_live.rs
src/modes/: clock.rs  mod.rs  pomodoro.rs
src/music/: command_line.rs  config.rs  engine.rs  library.rs  mod.rs  provider.rs  queue.rs  ui.rs  visualizer.rs
src/music/provider/: http.rs  local.rs  mod.rs  podcast.rs  radio.rs  ytdlp.rs
src/render/: canvas.rs  clock.rs  draw.rs  music.rs  pomodoro.rs  progress.rs  tests.rs  visualizer.rs
src/render/weathr/: braille_canvas.rs  halfblock_canvas.rs  mod.rs  types.rs  weather_scene.rs
src/render/weathr/animation/: airplanes.rs  birds.rs  butterflies.rs  chimney.rs  clouds.rs  fireflies.rs  fog.rs  leaves.rs  mod.rs  moon.rs  raindrops.rs  snow.rs  stars.rs  sunny.rs  thunderstorm.rs
src/render/weathr/scene/: decorations.rs  ground.rs  house.rs  mod.rs
