[package]
name = "timer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
figlet-rs = "0.1.5"
ratatui = "0.29"
rand = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rodio = { version = "0.17", features = ["symphonia-all"] }
serde = { version = "1.0", features = ["derive"] }
symphonia = { version = "0.5", default-features = false, features = ["all"] }
sysinfo = "0.37"
toml = "0.8"
unicode-width = "0.2"
walkdir = "2.5"
dirs = "6.0"
rustfft = "6.4"
