[package]
name = "timer"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A terminal dashboard with clock, pomodoro, weather, and multi-source music playback."
readme = "README.md"
keywords = ["timer", "tui", "pomodoro", "music", "dashboard"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
figlet-rs = "0.1.5"
ratatui = "0.29"
rand = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rodio = { version = "0.17", features = ["symphonia-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
symphonia = { version = "0.5", default-features = false }
sysinfo = "0.37"
toml = "0.8"
unicode-width = "0.2"
walkdir = "2.5"
dirs = "6.0"
quick-xml = "0.37"
rustfft = "6.4"

[profile.dev]
opt-level = 0
debug = true
incremental = true
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2
debug = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
